# factor_calculator

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
agent_usage/: 03_cli_usage.sh  03_run_biquotepeu.py  04_run_klinedmu.py  05_run_klinepatterndmu.py  README.md  SKILL.md
examples/: example_usage.ipynb  example_usage.py
factor_calculator/: __init__.py  cli.py  core.py  dominant.py  factory.py
factor_calculator_skill/: SKILL.md
factor_calculator_skill/examples/: 01_inspect_peu_params.py  02_run_mddmu.py
tests/: __init__.py  test_core.py  test_factory.py  test_multi_day.py
