[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "factor_calculator"
version = "0.1.1"
description = "Factor calculation tool using DMU and PEU units"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "rbt",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
include = ["factor_calculator*"]

[project.scripts]
factor-calculator = "factor_calculator.cli:main"
